# stock-prediction-lstm-api

./: .dockerignore  .gitignore  .ruffignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-ml.txt  requirements.txt
artifacts/: model.pt  model_config.json  model_lstm_1x16.pt  scaler.pkl  scaler_corrected.pkl  test_predictions.json
cli/: __init__.py  evaluate.py  main.py  monitor.py  pipeline.py  predict.py  train.py
configs/: config.yaml
configs/data/: b3_stocks.yaml
configs/mlflow/: local.yaml
configs/model/: lstm_baseline.yaml
configs/training/: default.yaml
data/raw/: stock_data.csv
docs/: API_DOCUMENTATION.md  API_SCHEMA_COMPLETO.md  CLI_DOCUMENTATION.md  DECISOES_DADOS_FINANCEIROS.md  DEPLOY.md  ML_DOCUMENTATION.md  MODEL_DOCUMENTATION.md  PROJECT_REPORT.md  PROPOSTA_API.md  TESTING_REPORT.md
docs/apresentacao/: DECISOES_TECNICAS.md
examples/: __init__.py  data_versioning_example.py  drift_detection_example.py  hyperparameter_tuning.py  persistence_advanced_example.py  pipeline_example.py  train_example.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  config.ts
frontend/src/components/: ErrorMessage.tsx  LoadingSpinner.tsx  ModelInfoModal.tsx  PredictionForm.tsx  PredictionResult.tsx
frontend/src/hooks/: usePrediction.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: formatters.ts  validators.ts
notebooks/: eda.ipynb
scripts/: dev1.sh  setup.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  model_info.py  prediction.py
src/api/services/: __init__.py  data_service.py  model_service.py  predict_service.py
src/api/utils/: __init__.py  exceptions.py  validators.py
src/ml/: __init__.py
src/ml/data/: __init__.py  feature_engineering.py  ingestion.py  preprocessing.py
src/ml/monitoring/: __init__.py  drift_detector.py
src/ml/pipeline/: __init__.py  predict_pipeline.py  train_pipeline.py
src/ml/training/: __init__.py  early_stopping.py  experiment_tracker.py  hyperparameter_tuner.py  metrics.py  trainer.py
src/ml/utils/: __init__.py  device.py  logging.py  persistence.py  seed.py
tests/: test_api.py  test_cli.py  test_docker.sh  test_error_handling.py  test_integration.py  test_monitoring_persistence.py  test_pipelines.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_drift_detector.py  test_metrics.py  test_model.py  test_persistence.py  test_preprocessing.py
